# coach

./: LICENSE  README.md
convert_image/: CMakeLists.txt  package.xml
convert_image/include/convert_image/: ConvertImage.hpp
convert_image/src/: ConvertImage.cpp
edinferno_coach/: CMakeLists.txt  package.xml
edinferno_coach/include/: SPLCoachMessage.hpp  ball_detection.hpp  game.hpp  lsd_opencv.hpp  segmentation.hpp
edinferno_coach/src/: ball_detection.cpp  calibration.cpp  edinferno_coach.cpp  game.cpp  lsd_opencv.cpp  segmentation.cpp
nao_cams/: CMakeLists.txt  package.xml
nao_cams/include/nao_cams/: NaoCamera.hpp
nao_cams/src/: NaoCamera.cpp  nao_cams.cpp
nao_cams/srv/: SelectCamera.srv  SetPublishMode.srv
